# EclipseEngine

./: .gitignore  .gitmodules  BuildGuide.md  CMakeLists.txt  LICENSE  README.md
Engine/: EclipseEngineDemo  Engine.cpp
Engine/Demo/: Demo.cpp  EclipseEngineDemo
Engine/FileSystem/: FS.cpp  FS.hpp
Engine/Game/: Test.cpp
Engine/Renderer/: Renderer.cpp  Renderer.hpp
Engine/Renderer/GL/: GLRenderer.cpp  GLRenderer.hpp  GLUI.cpp  GLUI.hpp
Engine/Renderer/GL/Ext/: glad.c
Engine/Renderer/GL/Ext/glad/: glad.h
Engine/Resources/Shaders/: MainShader.vert
Engine/Runtime/: Runtime.cpp  Runtime.hpp
Engine/Runtime/Driver/VK/: ResourceCompiler.cpp  ResourceCompiler.hpp  VulkanMain.cpp  VulkanMain.hpp
Engine/Runtime/Drivers/: Driver.hpp  DriverDispatcher.hpp
Engine/Runtime/Drivers/GL/: GL.cpp  GL.hpp
Engine/Runtime/Filesystem/: FileSystem.cpp  FileSystem.hpp
Engine/Runtime/Standard/: IO.hpp  Window.cpp  Window.hpp
Engine/Runtime/Window/: Window.cpp  Window.hpp
Engine/Standard/: IO.cpp  IO.hpp  Types.hpp
Engine/WindowManager/: WindowManager.cpp  WindowManager.hpp  _window_manager_linux.hpp  _window_manager_windows.hpp
core/: main.cpp
core/IO/: io.hpp
core/io/: io.hpp
core/window/: window.cpp  window.hpp
editor/: SimpleRun.cpp
engine/: Engine.cpp  Engine.hpp
